[package]
name = "buy_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11"
chrono = "0.4"
regex = "1.10.2"

